--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 # replace with your username:
-name = camapay-endur
+name = campay
 version = 0.0.1
 author = CamPay
 author_email = info@campay.net
@@ -11,7 +11,6 @@ url = https://github.com/CamPay/campay-python-sdk
 project_urls =
     Bug Tracker = https://github.com/CamPay/campay-python-sdk/issues
 classifiers =
-    Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
@@ -20,7 +19,7 @@ classifiers =
 package_dir =
     = src
 packages = find:
-python_requires = >=2.7
+python_requires = >=3
 
 [options.packages.find]
 where = src
